// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stripe Service createPaymentIntent should pass the request to the Prisma payment intents table: query to create intent ok 1`] = `
[
  [
    {
      "data": {
        "order": {
          "connect": {
            "id": "8b3ae683-0626-44be-b591-9271e288388f",
          },
        },
      },
    },
  ],
]
`;

exports[`Stripe Service createPaymentIntent should pass the request to the Stripe service: query to create intent stripe 1`] = `
[
  [
    {
      "amount": 30,
      "automatic_payment_methods": {
        "allow_redirects": "never",
        "enabled": true,
      },
      "currency": "usd",
      "metadata": {
        "order_id": "8b3ae683-0626-44be-b591-9271e288388f",
        "payment_id": "some id",
      },
    },
  ],
]
`;

exports[`Stripe Service createPaymentIntent should throw an error if the amount is negative: error amount is negative 1`] = `[BadRequestException: Amount cant be negative or zero!]`;

exports[`Stripe Service createPaymentIntent should throw an error if the amount is zero: error amount is zero 1`] = `[BadRequestException: Amount cant be negative or zero!]`;

exports[`Stripe Service createPaymentIntent should throw an error if the order does not exist: error order not found 1`] = `[NotFoundException: Order specified not found. Or order does not belong to the logged in user!]`;

exports[`Stripe Service createPaymentIntent should update Prisma with the Stripe response and return the key data: query to create intent stripe 1`] = `
[
  [
    {
      "amount": 30,
      "automatic_payment_methods": {
        "allow_redirects": "never",
        "enabled": true,
      },
      "currency": "usd",
      "metadata": {
        "order_id": "8b3ae683-0626-44be-b591-9271e288388f",
        "payment_id": "some id",
      },
    },
  ],
]
`;

exports[`Stripe Service createPaymentIntent should update Prisma with the Stripe response and return the key data: returns ok 1`] = `
{
  "client_secret": "test client secret",
  "created_at": 2021-01-12T18:12:12.000Z,
  "id": "8b3ae683-0626-44be-b591-9271e288388f",
  "order_id": "8b3ae683-0626-44be-b591-9271e288388f",
  "status": "requires_payment_method",
  "stripe_event_id": "8b3ae683-0626-44be-b591-9271e288388f",
}
`;

exports[`Stripe Service getOrderPayments should return all payment intents associated with the order: query of payments with select fields 1`] = `
[
  [
    {
      "select": {
        "created_at": true,
        "id": true,
        "order_id": true,
        "status": true,
        "stripe_event_id": true,
      },
      "where": {
        "order_id": "076b5b00-c719-40c3-a8f2-d1a11c17b75c",
      },
    },
  ],
]
`;

exports[`Stripe Service getOrderPayments should throw an error if the order with the user is not found: order user combo not found 1`] = `"Order specified not found. Or order does not belong to the logged in user!"`;

exports[`Stripe Service updatePaymentIntent should pass an update query to Prisma for the payment intent: sends the update payment method to stripe in query 1`] = `
[
  [
    "test_id",
    {
      "payment_method": "new payment method",
    },
  ],
]
`;

exports[`Stripe Service updatePaymentIntent should throw an error if the payment intent is not found: intent not found error 1`] = `"Payment intent specified not found."`;

exports[`Stripe Service updatePaymentIntent should throw an error if the payment intent status is already completed: intent already completed error 1`] = `"Payment has already succeeded, no further changes are allowed."`;

exports[`Stripe Service webhook should fetch data from Stripe, form a request to Prisma, and throw an error if no data is found: prisma find payment query 1`] = `
[
  [
    {
      "where": {
        "PaymentIntents": {
          "some": {
            "id": "test_payment_id",
          },
        },
        "id": "test_id",
      },
    },
  ],
]
`;

exports[`Stripe Service webhook should throw an error if signature header is missing: missing signature in header error 1`] = `"Missing Stripe Signature"`;

exports[`Stripe Service webhook should throw an error if the body is empty: missing body in request error 1`] = `"Missing Body"`;

exports[`Stripe Service webhook should update Prisma with failed status and return received: true for Stripe: update status payment_failed order 1`] = `
[
  [
    {
      "data": {
        "IncomingPaymentWebhooks": {
          "create": {
            "data": "{"signature":"some-value","body":{"random":"value"}}",
            "processed_at": "2021-01-01T16:10:59.000Z",
          },
        },
        "PaymentIntents": {
          "update": {
            "data": {
              "status": undefined,
            },
            "where": {
              "id": "test_payment_id",
            },
          },
        },
        "paymentStatus": undefined,
      },
      "where": {
        "id": "test_id",
      },
    },
  ],
]
`;

exports[`Stripe Service webhook should update Prisma with success status and return received: true for Stripe: update status ok order 1`] = `
[
  [
    {
      "data": {
        "IncomingPaymentWebhooks": {
          "create": {
            "data": "{"signature":"some-value","body":{"random":"value"}}",
            "processed_at": "2021-01-01T16:10:59.000Z",
          },
        },
        "PaymentIntents": {
          "update": {
            "data": {
              "status": "succeeded",
            },
            "where": {
              "id": "test_payment_id",
            },
          },
        },
        "paymentStatus": "succeeded",
      },
      "where": {
        "id": "test_id",
      },
    },
  ],
]
`;
